# solana_bot

./: .env  Cargo.toml
src/: constant.rs  error.rs  lib.rs  main.rs
src/addressManage/: addressManage.rs  mod.rs
src/fundManage/: fundManage.rs  mod.rs  strategy.rs  trade.rs
src/states/: states.rs
src/utils/: analyze_utils.rs  mod.rs
