[package]
name = "solana_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { version = "2.1.7"}
solana-sdk = { version = "2.1.7"}
solana-program = "2.1.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.95"
dotenv = "0.15.0"
solana-transaction-status-client-types = "2.1.7"